# kt-y2019

algorithms and data structures/01.Basic data structures/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
algorithms and data structures/02.Sorting and searches/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp
algorithms and data structures/03.Priority queues and DSU/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algorithms and data structures/04.Dynamic programming/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  J.cpp  K.cpp  L.cpp  M.cpp  O.cpp  Q.cpp  R.cpp  S.cpp  T.cpp
algorithms and data structures/05.Search trees/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
algorithms and data structures/06.Hash tables/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  G.cpp
algorithms and data structures/07.LCA, RMQ, etc./: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  S.cpp
algorithms and data structures/08.Depth-first search/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  S.cpp
algorithms and data structures/09.Shortest paths and spanning trees/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
algorithms and data structures/10.Matchings/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
algorithms and data structures/11.Flows/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
algorithms and data structures/12.Substring search/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  M.java  N.cpp
algorithms and data structures/13.Suffix data structures/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  SuffixTree.java
algorithms and data structures/14.Number theory/: A.cpp  B.cpp  C.cpp  D.cpp  F.java  G.cpp  H.cpp
algorithms and data structures/15.Exponential algorithms/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
bioinf/: 1.cpp  2.py  3.cpp  4.cpp  5.cpp  6.cpp  7.1.cpp  7.2.cpp  7.3.cpp  8.1.py  8.2.py
cpp/asm/: mul.asm  sub.asm
cpp/bigint/: big_integer.cpp  big_integer.h
cpp/bigint-optimized/: big_integer.cpp  big_integer.h  vector.cpp  vector.h
cpp/find/: find-c-effective.cpp  find-c-naive.cpp
cpp/vector/: vector.h
data-analysis/: Lab-1.ipynb  Lab-3.ipynb  Lab-4.ipynb  Lab-5.ipynb
dbms/hw10/: hw10.txt
dbms/hw3/: hw3.txt
dbms/hw4/: 4.docx  4.sql
dbms/hw5/: 01.1r  01.1s  01.2r  01.2s  02.1r  02.1s  02.2r  02.2s  03.1r  03.1s  03.2r  03.2s  03.3r  03.3s  03.4r  03.4s  03.5r  03.5s  03.6r  03.6s  04.1r  04.1s  04.2r  04.2s  05.1s  05.2r  05.2s  05.3r  05.3s  06.1r  06.1s  06.2r  06.2s  06.3r  06.3s  06.4r  06.4s  07.1r  07.1s  07.2r  (+10 more)
dbms/hw6/: main.txt
dbms/hw7/: 1.2s  1.3s  1.4s  1.5s  1.6s  1.7s  1.8s  2.2s  2.4s  2.5s  3.1s  3.2s  3.3s  3.4s  3.5s  3.6s  3.7s  3.8s  4.1s  4.2s  4.3s  4.4s  5.1s  5.2s  5.3s  5.4s  6.1s  6.2s  6.3s  6.sql  main.txt
dbms/hw8/: hw8.txt  test.sql
dbms/hw9/: hw9.sql
dbms/test/: 1.01r  1.01s  1.02r  1.02s  1.03r  1.03s  1.04r  1.04s  1.5r  1.5s  1.6r  1.6s  1.7r  1.7s  1.8r  1.8s  2.1d  2.1s  2.2d  2.2s  2.3d  2.3s  2.4d  2.4s  2.5d  2.5s  3.1s  (+5 more)
discrete math/: life.cpp
functional-programming/hw2/: hw2.cabal
functional-programming/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
geom/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  I_tests.txt  J.cpp  K.cpp  L.cpp  M.cpp
java-advanced/: README.md
java-intro/: README.md
ml/: A.cpp  B.cpp  D.cpp  F.cpp  G.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp
networks/: hw.txt  lec.txt
paradigms/: itmo-year2019-java - Google Диск.html
parallel-algos/labs/lab1-sort/: CMakeLists.txt  main.cpp  parallel.h  qsort_example.cpp  sequential.h  sort_utils.h  tests.cc
parallel-algos/labs/lab1-sort/cilkscale_benchmark/: cs_compile_n_bench.sh
parallel-algos/labs/lab1-sort/cilkscale_benchmark/main_results/: cstable.csv
parallel-algos/labs/lab1-sort/cilkscale_benchmark/qsort_sample_results/: cstable.csv
parallel-algos/labs/lab2_bfs/: CMakeLists.txt  bfs.h  main.cpp  scan.h  test_utils.h  tests.cc
probability theory/: Walker.java
stats/: naumov_matstat_extra.ipynb
theorcode/: A.cpp  J.cpp
translation-methods/lab-4/: CMakeLists.txt  draw.cpp  draw.h  generator.cpp  generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
translation-methods/lab-4/grammar/: Grammar.g4  generate.sh
translation-methods/lab-4/tmp/: expressions_grammar.txt  generated_data.txt  lab2_grammar.txt
translation-methods/lab2/: CMakeLists.txt  draw.cpp  draw.h  ff.py  lexer.cpp  lexer.h  main.cpp  parse.cpp  parse.h  report.tex  tree.cpp  tree.h
translation-methods/lab2/test/: test_parse.cc
web/: Web-программирование, 2020.xlsx  hw03.mhtml  hw04.docx  hw05.docx  hw06.docx  hw07.docx  hw08.docx  hw09.docx  hw10.docx  hw11.docx
(+365 files in other folders)
