name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/homework-2-td2r
-- license:             MIT
-- license-file:        LICENSE
author:              Naumov Ivan
maintainer:          td2r@niuitmo.ru
copyright:           2021 Naumov Ivan

category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  exposed-modules:     HW2.T1
                       HW2.T2
                       HW2.T3
                       HW2.T4
                       HW2.T5
                       HW2.T6
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , scientific
  default-language:    Haskell2010

--executable hw2
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , hw2
--                     , scientific
--                     , libiserv
--  default-language:    Haskell2010
